--- a/work.html
+++ b/work.html
@@ -108,7 +108,7 @@
                 </a>
             </div>
             <div class="item" data-aos="zoom-in-up" data-aos-delay="900">
-                <a href="https://github.com/arpit2304/QuizApp-JavaScript-">
+                <a href="https://nidamirza9.github.io/Harry_potter_Search/">
                     <img src="img/Harry.jpg" alt="Project" />
                 </a>
                 <a href="#" class="btn-light">
