--- a/resume.html
+++ b/resume.html
@@ -9,7 +9,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <link rel="stylesheet" href="css/main.css" />
-    <title>Arpitkumar Soni</title>
+    <title>Nida Mirza</title>
 </head>
 
 <body>
