--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ SSSssshhhhh!! The code starts below, Enjoy!!! -->
         </h1>
 
         <h2 class="heading" data-aos="zoom-in-up" data-aos-delay="500">
-            - Web Developer, Programmer
+            - Software Tester(QA)
         </h2>
         <div class="icons" data-aos="zoom-in-up" data-aos-delay="700">
             <a href="https://www.linkedin.com/in/nida-mirza/">
