--- a/about.html
+++ b/about.html
@@ -70,9 +70,7 @@
             <div class="bio">
                 <h3 class="text-secondary">BIO</h3>
                 <p>
-                    currently, I am pursuing Computer Engineering from Madhuben & Bhanubhai Patel Institute of Technology College. which is located at vv nager.I am a coding enthusiast with strong knowledge of CS Fundamentals and Software Development skilled in Java, C,
-                    JavaScript,PHP, Also having decent experience in developing various personal projects. As of now, I have started exploring Javascript for developing dynamic UI applications. I am looking for a internship in all the relevant profiles.
-                    I am confident that my skillsets would be a great fit for such profiles.
+                   Results-driven QA Engineer with 3+ years of hands-on experience in manual testing, SDLC/STLC processes, and Sitecore-based web platforms. ISTQB certified and highly skilled in functional, UI/UX, regression, cross-browser, and accessibility testing. Adept at working in Agile environments, collaborating with global stakeholders, and driving quality improvements across releases. Passionate about continuous learning—currently exploring Generative AI applications in testing and expanding automation expertise with Selenium and TestNG. Known for sharp attention to detail, proactive defect identification, and mentoring aspiring QA professionals.
                 </p>
             </div>
 
@@ -80,10 +78,20 @@
 
             <div class="job job-1" data-aos="zoom-in-up" data-aos-delay="300">
                 <h3>Technical Positions of Responsibility</h3>
-                <h4>Member in Software Club</h4>
+                <h4>Horizontal Digital – QA Engineer (Jan 2024 – Present)</h4>
                 <p>
-                    • Createing the post for Software Club<br> • Managing Social media Accounts for the club.<br> • Developed soft skills, leadership and communication <br>
+                    • Conduct cross-browser and UI testing for enterprise websites built with Sitecore CMS.<br> • Participate in Agile ceremonies and collaborate with global teams to clarify requirements and ensure high-quality releases.<br> • Conduct A/B testing to improve CRO and user engagement. <br> • Recognized for attention to detail and consistent bug reporting accuracy. <br> • Initiated learning in automation testing with Selenium, TestNG, and Maven. <br> • Mentored junior testers and ISTQB aspirants, organizing training and SME coordination.
 
+                </p>
+
+                <h4>Horizontal Digital – Associate QA Engineer (Jun 2022 – Dec 2023)</h4>
+                <p>
+                    • Executed manual testing (functional, UI, regression, and cross-platform) for banking projects.<br> • Designed detailed test cases, reported defects using JIRA, and tracked resolutions.<br> • Conducted accessibility testing and contributed to website personalization strategies. <br> • Improved bug discovery and resolution timelines by standardizing test documentation.  
+
+                </p>
+                <h4>Horizontal Digital – QA Intern (Jan 2022 – Jun 2022)</h4>
+                <p>
+                    • Gained proficiency in software testing processes, JIRA, Confluence, and QMetry.<br> • Completed Sitecore CMS training and supported a training portal project with manual testing.
                 </p>
             </div>
 
@@ -99,7 +107,7 @@
 
                 <h4>Cdt in NCC</h4>
                 <p>
-                    • Completed B Certifications exam with A grade.<br> • And attended TSC and CATC camps.
+                    • Completed B & C Certifications exam with A grade.<br> • And attended TSC and CATC camps.
                     <br>
                 </p>
             </div>
@@ -111,7 +119,7 @@
     </main>
 
     <footer id="main-footer">
-        Copyright &copy; 2021
+        Copyright &copy; 2025
     </footer>
 
     <script src="js/main.js"></script>
