--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
             Few things about me...
         </h2>
         <div class="about-info">
-            <img src="img/profile1.jpeg" alt="John Doe" class="bio-image" />
+            <img src="img/Nida - DP.jpg" alt="Nida Mirza" class="bio-image" />
 
             <div class="bio">
                 <h3 class="text-secondary">BIO</h3>
