--- a/index.html
+++ b/index.html
@@ -124,17 +124,17 @@ SSSssshhhhh!! The code starts below, Enjoy!!! -->
             - Software Tester(QA)
         </h2>
         <div class="icons" data-aos="zoom-in-up" data-aos-delay="700">
-            <a href="https://www.linkedin.com/in/nida-mirza/">
+            <a href="https://www.linkedin.com/in/nida-mirza/" target="_blank" rel="noopener noreferrer">
                 <i class="fab fa-linkedin fa-2x"></i>
             </a>
-            <a href="https://github.com/nidamirza9">
+            <a href="https://github.com/nidamirza9" target="_blank" rel="noopener noreferrer">
                 <i class="fab fa-github fa-2x"></i>
             </a>
-            <a href="mailto:mirzanida58@gmail.com">
+            <a href="mailto:mirzanida58@gmail.com" target="_blank" rel="noopener noreferrer">
                 <i class="fas fa-envelope fa-2x"></i>
             </a>
 
-            <a href="tel:9428306906">
+            <a href="tel:9428306906" target="_blank" rel="noopener noreferrer">
                 <i class="fas fa-mobile-alt fa-2x"></i>
             </a>
         </div>
