--- a/resume.html
+++ b/resume.html
@@ -61,7 +61,7 @@
         </h1>
         <div class="resume">
             <div class="resume-frame">
-                <iframe src="https://drive.google.com/drive/folders/1BH-sHyzFwk8hu0792Lg5JpwT70g47EA0/preview" width="840 " height="680 " data-aos="zoom-in-up" data-aos-delay="300"></iframe>
+                <iframe src="https://drive.google.com/file/d/1cRKhVQGQjVpzepq7allFwzpjNeBbgg6I/view?usp=sharing/preview" width="840 " height="680 " data-aos="zoom-in-up" data-aos-delay="300"></iframe>
             </div>
             <a href="Resume.pdf" class="download" download data-aos="zoom-in-up" data-aos-delay="300">Download</a
         >
