--- a/about.html
+++ b/about.html
@@ -12,6 +12,95 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <link rel="stylesheet" href="css/main.css" />
     <title>About Me</title>
+    <style>
+    body {
+      margin: 0;
+      padding: 0;
+      background-color: #121212;
+      font-family: 'Segoe UI', sans-serif;
+      color: #ffffff;
+    }
+
+    #about {
+      padding: 2rem;
+      max-width: 1000px;
+      margin: auto;
+    }
+
+    .lg-heading {
+      font-size: 3rem;
+      text-align: center;
+      margin-bottom: 0.5rem;
+      color: #5eead4;
+    }
+
+    .sm-heading {
+      font-size: 1.5rem;
+      text-align: center;
+      color: #aaa;
+      margin-bottom: 2rem;
+    }
+
+    .about-info {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 2rem;
+    }
+
+    .bio-image {
+      width: 150px;
+      height: 150px;
+      border-radius: 50%;
+      object-fit: cover;
+      border: 4px solid #5eead4;
+    }
+
+    .bio {
+      max-width: 800px;
+      line-height: 1.7;
+      font-size: 1rem;
+      background: #1e1e1e;
+      padding: 1.5rem;
+      border-radius: 15px;
+      box-shadow: 0 0 10px rgba(94, 234, 212, 0.3);
+    }
+
+    .bio h3 {
+      color: #5eead4;
+      margin-bottom: 0.5rem;
+    }
+
+    .job {
+      max-width: 800px;
+      background: #1e1e1e;
+      padding: 1.5rem;
+      border-radius: 15px;
+      line-height: 1.6;
+      box-shadow: 0 0 15px rgba(94, 234, 212, 0.3);
+    }
+
+    .job h3 {
+      font-size: 1.5rem;
+      color: #5eead4;
+      margin-bottom: 0.5rem;
+    }
+
+    .job h4 {
+      color: #a2d2ff;
+      margin-top: 1.5rem;
+    }
+
+    #main-footer {
+      text-align: center;
+      margin-top: 3rem;
+      padding: 1rem;
+      background-color: #000;
+      color: #5eead4;
+      font-size: 0.9rem;
+    }
+  </style>
+</head>
 </head>
 
 <body>
@@ -56,53 +145,61 @@
         </nav>
     </header>
 
-    <main id="about">
-        <h1 class="lg-heading">
-            About
-            <span class="text-secondary">Me</span>
-        </h1>
-        <h2 class="sm-heading">
-            Few things about me...
-        </h2>
-        <div class="about-info">
-            <img src="img/Nida - DP.jpg" alt="Nida Mirza" class="bio-image" />
+    <link href="https://fonts.googleapis.com/css2?family=Segoe+UI:wght@400;600;700&display=swap" rel="stylesheet">
+  
+  <section id="about">
+    <h1 class="lg-heading">About Me</h1>
+    <p class="sm-heading">Few things about me...</p>
 
-            <div class="bio">
-                <h3 class="text-secondary">BIO</h3>
-                <p>
-                   Results-driven QA Engineer with 3+ years of hands-on experience in manual testing, SDLC/STLC processes, and Sitecore-based web platforms. ISTQB certified and highly skilled in functional, UI/UX, regression, cross-browser, and accessibility testing. Adept at working in Agile environments, collaborating with global stakeholders, and driving quality improvements across releases. Passionate about continuous learning—currently exploring Generative AI applications in testing and expanding automation expertise with Selenium and TestNG. Known for sharp attention to detail, proactive defect identification, and mentoring aspiring QA professionals.
-                </p>
-            </div>
+    <div class="about-info">
+      <img src="img/projects/Nida - DP.jpg" alt="Nida Mirza" class="bio-image" />
 
+      <div class="bio">
+        <h3>BIO</h3>
+        <p>
+          Results-driven QA Engineer with 3+ years of hands-on experience in manual testing, SDLC/STLC processes, and Sitecore-based web platforms. ISTQB certified and highly skilled in functional, UI/UX, regression, cross-browser, and accessibility testing. Adept at working in Agile environments, collaborating with global stakeholders, and driving quality improvements across releases. Passionate about continuous learning—currently exploring Generative AI applications in testing and expanding automation expertise with Selenium and TestNG. Known for sharp attention to detail, proactive defect identification, and mentoring aspiring QA professionals.
+        </p>
+      </div>
 
+      <div class="job">
+        <h3>Technical Positions of Responsibility</h3>
+        <h4>Horizontal Digital – QA Engineer (Jan 2024 – Present)</h4>
+        <ul>
+          <li>Conduct cross-browser and UI testing for enterprise websites built with Sitecore CMS.</li>
+          <li>Participate in Agile ceremonies and collaborate with global teams to clarify requirements and ensure high-quality releases.</li>
+          <li>Conduct A/B testing to improve CRO and user engagement.</li>
+          <li>Recognized for attention to detail and consistent bug reporting accuracy.</li>
+          <li>Initiated learning in automation testing with Selenium, TestNG, and Maven.</li>
+          <li>Mentored junior testers and ISTQB aspirants, organizing training and SME coordination.</li>
+        </ul>
 
-            <div class="job job-1" data-aos="zoom-in-up" data-aos-delay="300">
-                <h3>Technical Positions of Responsibility</h3>
-                <h4>Horizontal Digital – QA Engineer (Jan 2024 – Present)</h4>
-                <p>
-                    • Conduct cross-browser and UI testing for enterprise websites built with Sitecore CMS.<br> • Participate in Agile ceremonies and collaborate with global teams to clarify requirements and ensure high-quality releases.<br> • Conduct A/B testing to improve CRO and user engagement. <br> • Recognized for attention to detail and consistent bug reporting accuracy. <br> • Initiated learning in automation testing with Selenium, TestNG, and Maven. <br> • Mentored junior testers and ISTQB aspirants, organizing training and SME coordination.
+        <h4>Horizontal Digital – Associate QA Engineer (Jun 2022 – Dec 2023)</h4>
+        <ul>
+          <li>Executed manual testing (functional, UI, regression, and cross-platform) for banking projects.</li>
+          <li>Designed detailed test cases, reported defects using JIRA, and tracked resolutions.</li>
+          <li>Conducted accessibility testing and contributed to website personalization strategies.</li>
+          <li>Improved bug discovery and resolution timelines by standardizing test documentation.</li>
+        </ul>
 
-                </p>
+        <h4>Horizontal Digital – QA Intern (Jan 2022 – Jun 2022)</h4>
+        <ul>
+          <li>Gained proficiency in software testing processes, JIRA, Confluence, and QMetry.</li>
+          <li>Completed Sitecore CMS training and supported a training portal project with manual testing.</li>
+        </ul>
+      </div>
+    </div>
+  </section>
 
-                <h4>Horizontal Digital – Associate QA Engineer (Jun 2022 – Dec 2023)</h4>
-                <p>
-                    • Executed manual testing (functional, UI, regression, and cross-platform) for banking projects.<br> • Designed detailed test cases, reported defects using JIRA, and tracked resolutions.<br> • Conducted accessibility testing and contributed to website personalization strategies. <br> • Improved bug discovery and resolution timelines by standardizing test documentation.  
+  <footer id="main-footer">
+    Copyright © 2025
+  </footer>
 
-                </p>
-                <h4>Horizontal Digital – QA Intern (Jan 2022 – Jun 2022)</h4>
-                <p>
-                    • Gained proficiency in software testing processes, JIRA, Confluence, and QMetry.<br> • Completed Sitecore CMS training and supported a training portal project with manual testing.
-                </p>
-            </div>
-
-        </div>
-    </main>
-
-    <footer id="main-footer">
-        Copyright &copy; 2025
-    </footer>
-
-    <script src="js/main.js"></script>
+  <!-- Optional JavaScript (for animations or future additions) -->
+  <script>
+    // Example: Scroll animation or future interactivity
+    window.addEventListener('scroll', () => {
+      // Add scroll-based interactions here if needed
+    });
+  </script>
 </body>
-
 </html>
