--- a/about.html
+++ b/about.html
@@ -57,11 +57,11 @@
     }
 
     .bio {
-      max-width: 800px;
+      max-width: 400px;
       line-height: 1.7;
       font-size: 1rem;
       background: #1e1e1e;
-      padding: 1.5rem;
+      padding: 1rem;
       border-radius: 15px;
       box-shadow: 0 0 10px rgba(94, 234, 212, 0.3);
     }
@@ -87,7 +87,7 @@
     }
 
     .job h4 {
-      color: #a2d2ff;
+      color: #5eead4;
       margin-top: 1.5rem;
     }
 
@@ -162,7 +162,7 @@
       </div>
 
       <div class="job">
-        <h3>Technical Positions of Responsibility</h3>
+        <h3>Experiences</h3>
         <h4>Horizontal Digital – QA Engineer (Jan 2024 – Present)</h4>
         <ul>
           <li>Conduct cross-browser and UI testing for enterprise websites built with Sitecore CMS.</li>
