--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
       max-width: 800px;
       line-height: 1.7;
       font-size: 0.5rem;
-      background: #1e1e1e;
+      background: #0b0c10;
       padding: 1rem;
       border-radius: 15px;
       box-shadow: 0 0 10px rgba(94, 234, 212, 0.3);
@@ -73,7 +73,7 @@
 
     .job {
       max-width: 800px;
-      background: #1e1e1e;
+      background: #0b0c10
       padding: 1.5rem;
       border-radius: 15px;
       line-height: 1.6;
