--- a/about.html
+++ b/about.html
@@ -169,7 +169,7 @@
   <nav class="menu">
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
-    <a href="projects.html">Projects</a>
+    <a href="work.html">Projects</a>
     <a href="contact.html">Contact</a>
   </nav>
 
