--- a/about.html
+++ b/about.html
@@ -165,11 +165,13 @@
     <div class="btn-line"></div>
     <div class="btn-line"></div>
     <div class="btn-line"></div>
+    <div class="btn-line"></div>
   </button>
   <nav class="menu">
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
     <a href="work.html">Projects</a>
+    <a href="resume.html">Projects</a>
     <a href="contact.html">Contact</a>
   </nav>
 
