--- a/about.html
+++ b/about.html
@@ -171,7 +171,7 @@
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
     <a href="work.html">Projects</a>
-    <a href="resume.html">Projects</a>
+    <a href="resume.html">Resume</a>
     <a href="contact.html">Contact</a>
   </nav>
 
