--- a/work.html
+++ b/work.html
@@ -14,44 +14,21 @@
 
 <body>
     <header>
-        <div class="menu-btn">
-            <div class="btn-line"></div>
-            <div class="btn-line"></div>
-            <div class="btn-line"></div>
-        </div>
+       <body>
+  <button class="menu-btn">
+    <div class="btn-line"></div>
+    <div class="btn-line"></div>
+    <div class="btn-line"></div>
+    <div class="btn-line"></div>
+  </button>
+  <nav class="menu">
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="work.html">Projects</a>
+    <a href="resume.html">Resume</a>
+    <a href="contact.html">Contact</a>
+  </nav>
 
-        <nav class="menu">
-            <div class="menu-branding">
-                <div class="portrait"></div>
-            </div>
-            <ul class="menu-nav">
-                <li class="nav-item">
-                    <a href="index.html" class="nav-link">
-              Home
-            </a>
-                </li>
-                <li class="nav-item ">
-                    <a href="about.html" class="nav-link">
-              About Me
-            </a>
-                </li>
-                <li class="nav-item current">
-                    <a href="work.html" class="nav-link">
-              Projects
-            </a>
-                </li>
-                <li class="nav-item">
-                    <a href="resume.html" class="nav-link">
-              Resume
-            </a>
-                </li>
-                <li class="nav-item">
-                    <a href="contact.html" class="nav-link">
-              Contact Me
-            </a>
-                </li>
-            </ul>
-        </nav>
     </header>
 
     <main id="work">
