--- a/index.html
+++ b/index.html
@@ -68,51 +68,81 @@ SSSssshhhhh!! The code starts below, Enjoy!!! -->
     <title>Nida Mirza</title>
 </head>
 
-<body id="bg-img">
-    <!-- Google Tag Manager (noscript) -->
-    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KD46ZP2"
-    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-    <!-- End Google Tag Manager (noscript) -->
-    <header>
-        <div class="menu-btn">
-            <div class="btn-line"></div>
-            <div class="btn-line"></div>
-            <div class="btn-line"></div>
-        </div>
+ <style>  
+   .menu-btn {
+      position: fixed;
+      top: 1rem;
+      right: 1rem;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+      width: 30px;
+      height: 25px;
+      background: none;
+      border: none;
+      cursor: pointer;
+      z-index: 1001;
+    }
 
-        <nav class="menu">
-            <div class="menu-branding">
-                <div class="portrait"></div>
-            </div>
-            <ul class="menu-nav ">
-                <li class="nav-item current">
-                    <a href="index.html" class="nav-link">
-              Home
-            </a>
-                </li>
-                <li class="nav-item ">
-                    <a href="about.html" class="nav-link">
-              About Me
-            </a>
-                </li>
-                <li class="nav-item">
-                    <a href="work.html" class="nav-link">
-              Projects
-            </a>
-                </li>
-                <li class="nav-item">
-                    <a href="resume.html" class="nav-link">
-              Resume
-            </a>
-                </li>
-                <li class="nav-item">
-                    <a href="contact.html" class="nav-link">
-              Contact Me
-            </a>
-                </li>
-            </ul>
-        </nav>
-    </header>
+    .btn-line {
+      width: 100%;
+      height: 4px;
+      background-color: #5eead4;
+      transition: all 0.3s ease;
+    }
+
+    .menu {
+      transform: translateX(-100%);
+      transition: transform 0.3s ease;
+      position: fixed;
+      width: 100%;
+      height: 100vh;
+      background-color: #0b0c10;
+      top: 0;
+      left: 0;
+      z-index: 1000;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      gap: 2rem;
+    }
+
+    .menu.show {
+      transform: translateX(0);
+    }
+
+    .menu-btn.close .btn-line:nth-child(1) {
+      transform: rotate(45deg) translate(5px, 5px);
+    }
+    .menu-btn.close .btn-line:nth-child(2) {
+      opacity: 0;
+    }
+    .menu-btn.close .btn-line:nth-child(3) {
+      transform: rotate(-45deg) translate(5px, -5px);
+    }
+
+    .menu a {
+      color: #5eead4;
+      font-size: 1.5rem;
+      text-decoration: none;
+    }
+  </style>
+</head>
+<body>
+  <button class="menu-btn">
+    <div class="btn-line"></div>
+    <div class="btn-line"></div>
+    <div class="btn-line"></div>
+    <div class="btn-line"></div>
+  </button>
+  <nav class="menu">
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="work.html">Projects</a>
+    <a href="resume.html">Resume</a>
+    <a href="contact.html">Contact</a>
+  </nav>
 
     <main id="home">
         <h1 class="lg-heading anmtn" data-aos="zoom-in-up" data-aos-delay="300">
