--- a/resume.html
+++ b/resume.html
@@ -12,40 +12,171 @@
     <title>Nida Mirza</title>
 </head>
 
+<style>
+    *, *::before, *::after {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
+
+    body {
+      background-color: #121212;
+      font-family: 'Segoe UI', sans-serif;
+      color: #ffffff;
+      scroll-behavior: smooth;
+    }
+
+    .menu-btn {
+      position: fixed;
+      top: 1rem;
+      right: 1rem;
+      width: 30px;
+      height: 25px;
+      background: none;
+      border: none;
+      z-index: 1002;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      cursor: pointer;
+    }
+
+    .btn-line {
+      width: 100%;
+      height: 4px;
+      background-color: #5eead4;
+      transition: all 0.3s ease;
+    }
+
+    .menu {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100vh;
+      background-color: rgba(11, 12, 16, 0.95);
+      display: none;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      gap: 2rem;
+      z-index: 1001;
+    }
+
+    .menu.show {
+      display: flex;
+    }
+
+    .menu-btn.close .btn-line:nth-child(1) {
+      transform: rotate(45deg) translate(5px, 5px);
+    }
+
+    .menu-btn.close .btn-line:nth-child(2) {
+      opacity: 0;
+    }
+
+    .menu-btn.close .btn-line:nth-child(3) {
+      transform: rotate(-45deg) translate(5px, -5px);
+    }
+
+    .menu a {
+      color: #5eead4;
+      font-size: 1.5rem;
+      text-decoration: none;
+      transition: color 0.3s;
+    }
+
+    .menu a:hover {
+      color: #ffffff;
+    }
+
+    main#resume {
+      padding: 3rem 1rem;
+      max-width: 1000px;
+      margin: auto;
+      text-align: center;
+    }
+
+    .lg-heading {
+      font-size: 2.5rem;
+      color: #5eead4;
+      margin-bottom: 1rem;
+    }
+
+    .resume-frame iframe {
+      width: 100%;
+      height: 600px;
+      border: none;
+      border-radius: 12px;
+      box-shadow: 0 4px 20px rgba(94, 234, 212, 0.15);
+      margin-bottom: 2rem;
+    }
+
+    .download {
+      display: inline-block;
+      padding: 0.75rem 1.5rem;
+      background-color: #5eead4;
+      color: #121212;
+      border-radius: 8px;
+      text-decoration: none;
+      font-weight: bold;
+      transition: background-color 0.3s;
+    }
+
+    .download:hover {
+      background-color: #3ad9c3;
+    }
+
+    footer#main-footer {
+      text-align: center;
+      margin-top: 4rem;
+      padding: 1rem;
+      background-color: #000;
+      color: #5eead4;
+      font-size: 0.9rem;
+    }
+  </style>
+</head>
+
 <body>
-    <body>
-  <button class="menu-btn">
-    <div class="btn-line"></div>
+  <button class="menu-btn" aria-label="Menu Toggle">
     <div class="btn-line"></div>
     <div class="btn-line"></div>
     <div class="btn-line"></div>
   </button>
+
   <nav class="menu">
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
-    <a href="work.html">Projects</a>
+    <a href="projects.html">Projects</a>
     <a href="resume.html">Resume</a>
     <a href="contact.html">Contact</a>
   </nav>
-    </header>
 
-    <main id="resume">
-        <h1 class="lg-heading">
-            My
-            <span class="text-secondary">Resume</span>
-        </h1>
-        <div class="resume">
-            <div class="resume-frame">
-                <iframe src="https://drive.google.com/file/d/1cRKhVQGQjVpzepq7allFwzpjNeBbgg6I/preview" width="840 " height="680 " data-aos="zoom-in-up" data-aos-delay="300"></iframe>
-            </div>
-            <a href="Resume.pdf" class="download" download data-aos="zoom-in-up" data-aos-delay="300">Download</a
-        >
-      </div>
-    </main>
-    <footer id="main-footer">
-      Copyright &copy; 2025
-    </footer>
+  <main id="resume">
+    <h1 class="lg-heading" data-aos="fade-down">My <span class="text-secondary">Resume</span></h1>
+    <div class="resume-frame" data-aos="zoom-in-up" data-aos-delay="300">
+      <iframe src="https://drive.google.com/file/d/1cRKhVQGQjVpzepq7allFwzpjNeBbgg6I/preview"></iframe>
+    </div>
+    <a href="Resume.pdf" class="download" download data-aos="fade-up" data-aos-delay="500">Download</a>
+  </main>
 
-    <script src="js/main.js"></script>
-  </body>
+  <footer id="main-footer">
+    © 2025 Nida Mirza | All rights reserved
+  </footer>
+
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init();
+
+    const menuBtn = document.querySelector('.menu-btn');
+    const menu = document.querySelector('.menu');
+
+    menuBtn.addEventListener('click', () => {
+      menu.classList.toggle('show');
+      menuBtn.classList.toggle('close');
+    });
+  </script>
+</body>
+
 </html>
