--- a/contact.html
+++ b/contact.html
@@ -19,81 +19,50 @@
 </head>
 
 <body>
-    <header>
-        <div class="menu-btn">
-            <div class="btn-line"></div>
-            <div class="btn-line"></div>
-            <div class="btn-line"></div>
-        </div>
+  <button class="menu-btn">
+    <div class="btn-line"></div>
+    <div class="btn-line"></div>
+    <div class="btn-line"></div>
+  </button>
 
-        <nav class="menu">
-            <div class="menu-branding">
-                <div class="portrait"></div>
-            </div>
-            <ul class="menu-nav">
-                <li class="nav-item">
-                    <a href="index.html" class="nav-link">
-              Home
-            </a>
-                </li>
-                <li class="nav-item">
-                    <a href="about.html" class="nav-link">
-              About Me
-            </a>
-                </li>
-                <li class="nav-item">
-                    <a href="work.html" class="nav-link">
-              Projects
-            </a>
-                </li>
-                <li class="nav-item">
-                    <a href="resume.html" class="nav-link">
-              Resume
-            </a>
-                </li>
-                <li class="nav-item current">
-                    <a href="contact.html" class="nav-link">
-              Contact Me
-            </a>
-                </li>
-            </ul>
-        </nav>
-    </header>
+  <nav class="menu">
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="work.html">Projects</a>
+    <a href="resume.html">Resume</a>
+    <a href="contact.html" class="active">Contact</a>
+  </nav>
 
-    <main id="contact">
-        <h1 class="lg-heading">
-            Contact
-            <span class="text-secondary">Me</span>
-        </h1>
-        <h2 class="sm-heading">
-            This is how you can reach me...
-        </h2>
-        <div class="social method">
-            <div class="nav-list">
-                <div class="linkedin">
-                    <a target="_blank" href="https://www.linkedin.com/in/nida-mirza/" class="icon-list">
-                        <i class="fab fa-linkedin-in" data-aos="zoom-in-up" data-aos-delay="300"></i>
-                    </a>
-                </div>
-                <div class="github method">
-                    <a target="_blank " href="https://github.com/nidamirza9" class="icon-list ">
-                        <i class="fab fa-github-square" data-aos="zoom-in-up" data-aos-delay="500"></i>
-                    </a>
-                </div>
-                <div class="gmail method">
-                    <a target="_blank " href="mailto:mirzanida58@gmail.com" class="icon-list ">
-                        <i class="fa fa-envelope " data-aos="zoom-in-up" data-aos-delay="700"></i>
-                    </a>
-                </div>
-            </div>
-        </div>
-    </main>
+  <main id="contact">
+    <h1 class="lg-heading" data-aos="fade-down">
+      Contact <span class="text-secondary">Me</span>
+    </h1>
+    <h2 class="sm-heading" data-aos="fade-up" data-aos-delay="200">
+      Let’s increase your company’s success rate. Contact me — I’m a one-of-a-kind edition!
+    </h2>
 
-    <footer id="main-footer">
-        Copyright &copy; 2021
-    </footer>
+    <div class="contact-icons" data-aos="zoom-in" data-aos-delay="400">
+      <a target="_blank" href="https://www.linkedin.com/in/nida-mirza/">
+        <i class="fab fa-linkedin"></i>
+      </a>
+      <a target="_blank" href="https://github.com/nidamirza9">
+        <i class="fab fa-github"></i>
+      </a>
+      <a href="mailto:mirzanida58@gmail.com">
+        <i class="fas fa-envelope"></i>
+      </a>
+    </div>
+  </main>
 
-    <script src="js/main.js"></script>
+  <footer id="main-footer">
+    Copyright &copy; 2025 Nida Mirza
+  </footer>
+
+  <script src="js/main.js"></script>
+  <script>
+    AOS.init({
+      duration: 1000,
+      once: true
+    });
+  </script>
 </body>
-
-</html>
