--- a/contact.html
+++ b/contact.html
@@ -18,8 +18,188 @@
     <title>Contact Me</title>
 </head>
 
+  <style>
+    *, *::before, *::after {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
+
+    body {
+      background-color: #121212;
+      font-family: 'Segoe UI', sans-serif;
+      color: #ffffff;
+      scroll-behavior: smooth;
+    }
+
+    .menu-btn {
+      position: fixed;
+      top: 1rem;
+      right: 1rem;
+      width: 30px;
+      height: 25px;
+      background: none;
+      border: none;
+      z-index: 1002;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      cursor: pointer;
+    }
+
+    .btn-line {
+      width: 100%;
+      height: 4px;
+      background-color: #5eead4;
+      transition: all 0.3s ease;
+    }
+
+    .menu {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100vh;
+      background-color: rgba(11, 12, 16, 0.95);
+      display: none;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      gap: 2rem;
+      z-index: 1001;
+    }
+
+    .menu.show {
+      display: flex;
+    }
+
+    .menu-btn.close .btn-line:nth-child(1) {
+      transform: rotate(45deg) translate(5px, 5px);
+    }
+
+    .menu-btn.close .btn-line:nth-child(2) {
+      opacity: 0;
+    }
+
+    .menu-btn.close .btn-line:nth-child(3) {
+      transform: rotate(-45deg) translate(5px, -5px);
+    }
+
+    .menu a {
+      color: #5eead4;
+      font-size: 1.5rem;
+      text-decoration: none;
+      transition: color 0.3s;
+    }
+
+    .menu a:hover {
+      color: #ffffff;
+    }
+
+    main#contact {
+      padding: 3rem 1rem;
+      max-width: 1000px;
+      margin: auto;
+      text-align: center;
+    }
+
+    .lg-heading {
+      font-size: 2.5rem;
+      color: #5eead4;
+      margin-bottom: 1rem;
+    }
+
+    .sm-heading {
+      font-size: 1.2rem;
+      color: #ccc;
+      margin-bottom: 2rem;
+    }
+
+    .social {
+      margin-top: 6rem;
+    }
+
+    .social i {
+      font-size: 4rem;
+      transition: color 650ms;
+      margin: 2rem;
+      display: grid;
+    }
+
+    .fa-github-square:hover,
+    .fa-github:hover {
+      color: #585252;
+    }
+
+    .fa-instagram:hover {
+      color: #e1306c;
+    }
+
+    .fa-linkedin-in:hover,
+    .fa-linkedin:hover {
+      color: #0e76a8;
+    }
+
+    .fa-envelope:hover {
+      color: rgb(202, 22, 22);
+    }
+
+    .fa-mobile-alt:hover {
+      color: rgb(47, 185, 47);
+    }
+
+    .nav-list {
+      width: 100%;
+      height: 100%;
+      justify-content: center;
+      align-items: center;
+      display: grid;
+      grid-template-areas: 'linkedin github gmail instagram call';
+      grid-template-columns: repeat(5, 1fr);
+    }
+
+    .linkedin {
+      grid-area: linkedin;
+    }
+
+    .github {
+      grid-area: github;
+    }
+
+    .gmail {
+      grid-area: gmail;
+    }
+
+    .contact-icons {
+      display: flex;
+      justify-content: center;
+      gap: 2rem;
+      font-size: 2rem;
+    }
+
+    .contact-icons a {
+      color: #5eead4;
+      transition: transform 0.3s, color 0.3s;
+    }
+
+    .contact-icons a:hover {
+      color: #ffffff;
+      transform: scale(1.2);
+    }
+
+    footer#main-footer {
+      text-align: center;
+      margin-top: 4rem;
+      padding: 1rem;
+      background-color: #000;
+      color: #5eead4;
+      font-size: 0.9rem;
+    }
+  </style>
+</head>
+
 <body>
-  <button class="menu-btn">
+  <button class="menu-btn" aria-label="Menu Toggle">
     <div class="btn-line"></div>
     <div class="btn-line"></div>
     <div class="btn-line"></div>
@@ -28,7 +208,7 @@
   <nav class="menu">
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
-    <a href="work.html">Projects</a>
+    <a href="projects.html">Projects</a>
     <a href="resume.html">Resume</a>
     <a href="contact.html" class="active">Contact</a>
   </nav>
@@ -41,28 +221,35 @@
       Let’s increase your company’s success rate. Contact me — I’m a one-of-a-kind edition!
     </h2>
 
-    <div class="contact-icons" data-aos="zoom-in" data-aos-delay="400">
-      <a target="_blank" href="https://www.linkedin.com/in/nida-mirza/">
+    <div class="contact-icons social" data-aos="zoom-in" data-aos-delay="400">
+      <a target="_blank" href="https://www.linkedin.com/in/nida-mirza/" class="linkedin">
         <i class="fab fa-linkedin"></i>
       </a>
-      <a target="_blank" href="https://github.com/nidamirza9">
+      <a target="_blank" href="https://github.com/nidamirza9" class="github">
         <i class="fab fa-github"></i>
       </a>
-      <a href="mailto:mirzanida58@gmail.com">
+      <a href="mailto:mirzanida58@gmail.com" class="gmail">
         <i class="fas fa-envelope"></i>
       </a>
     </div>
   </main>
 
   <footer id="main-footer">
-    Copyright &copy; 2025 Nida Mirza
+    © 2025 Nida Mirza | All rights reserved
   </footer>
 
-  <script src="js/main.js"></script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script>
-    AOS.init({
-      duration: 1000,
-      once: true
+    AOS.init({ duration: 1000, once: true });
+
+    const menuBtn = document.querySelector('.menu-btn');
+    const menu = document.querySelector('.menu');
+
+    menuBtn.addEventListener('click', () => {
+      menu.classList.toggle('show');
+      menuBtn.classList.toggle('close');
     });
   </script>
 </body>
+
+</html>
